Fixed alignment and distance beetween components

--- a/src/App.css
+++ b/src/App.css
@@ -1,14 +1,19 @@
 .card{
-    width: 250px;
+    width: 275px;
     height: 100%;
     border-radius: 5px;
     background-color: #FBFEF9;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
 }
 
 .profile {
-    width: 250px;
-    height: 250px;
-    border-radius: 3px 3px 0 0;
+    padding: 10px 10px 0 10px;
+    width: 200px;
+    height: 200px;
+    border-radius: 50%;
 }
 
 h2, p , h4{
